--- a/src/scss/_game.scss
+++ b/src/scss/_game.scss
@@ -5,9 +5,17 @@
     padding: 0 2rem;
     .container {
       width: 100%;
-      height: 68vh;
+      height: 28rem;
       border-radius: 0.3rem;
       background-color: rgba(0, 255, 255, 0.274);
+      padding: 0.5rem;
+      .canvas-wrapper {
+        width: 100%;
+        height: 100%;
+        #canvas-game {
+          background-color: rgba(0, 238, 255, 0.336);
+        }
+      }
     }
   }
 }
