--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -28,6 +28,7 @@ body {
 
 @media (max-width: 1037px) {
   .canvas-wrapper {
-    overflow: scroll;
+    overflow-y: hidden;
+    overflow-x: scroll;
   }
 }
