--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -27,7 +27,7 @@ body {
 }
 
 @media (max-width: 1037px) {
-  .canvas-wrapper {
+  .game-wrapper {
     overflow-y: hidden;
     overflow-x: scroll;
   }
