--- a/src/scss/_game.scss
+++ b/src/scss/_game.scss
@@ -1,6 +1,6 @@
 @mixin game {
   main {
-    max-width: 1024px;
+    max-width: 1030px;
     margin: 0 auto;
     padding: 0 2rem;
     .container {
@@ -9,11 +9,26 @@
       border-radius: 0.3rem;
       background-color: rgba(0, 255, 255, 0.274);
       padding: 0.5rem;
-      .canvas-wrapper {
+      .game-wrapper {
         width: 100%;
         height: 100%;
-        #canvas-game {
-          background-color: rgba(0, 238, 255, 0.336);
+        .game {
+          width: 100%;
+          height: 100%;
+          display: grid;
+          gap: 0.1rem;
+          grid-template-columns: repeat(54, 1rem);
+          div {
+            width: 1rem;
+            height: 1rem;
+            border-radius: 0.1rem;
+          }
+          .alive {
+            background-color: rgb(0, 180, 180);
+          }
+          .dead {
+            background-color: rgb(9, 95, 95);
+          }
         }
       }
     }
